image added and alignment to fix

--- a/index.css
+++ b/index.css
@@ -3,6 +3,11 @@
     padding: 0;
     border: 0;
 }
+#header-part{
+    width: 100%;
+    height: 100vh;
+    background-color: antiquewhite;
+}
 
 #header {
     height: 7vh;
@@ -21,4 +26,29 @@
 
 #header a {
     text-decoration: none;
+}
+
+.header-title-and-text{
+    width: 100%;
+    margin-top: 7em;
+    text-align: center;
+}
+
+.header-title-and-text h2{
+    font-size: 3rem;
+}
+
+.explore-btn{
+    margin-top: 20px;
+    padding: 10px;
+    background-color: orange;
+    color: white;
+    font-size: 1.2srem;
+    font-weight: 800;
+    border-radius: 3px;
+}
+
+#header-part img{
+    width: 100%;
+    margin: 30px 0;
 }
